# nnue-pytorch

./: .gitignore  Dockerfile  README.md  app.py  build_cog.sh  build_container.sh  cog.yaml  go.sh  octoai.yaml  pcconfig.py  predict.py  pyproject.toml  remote.py  run_cog.sh  run_container.sh  service.py  test_request.py  ui.py  xref.py
data/: carlsen_anand_2013_championship.pgn  fens.txt  opera_game.pgn
vida/: vida.py
