[tool.poetry]
name = "vida"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

chess             = "^1.9"
python-chess-engine-extensions = { git = "https://github.com/adelbertc/python-chess-engine-extensions.git", branch = "poetry-setup" }
cupy-cuda117      = "^10.6"
octoml-profile    = "==0.1.5"
pysimplegui       = "^4.60"
pytorch-lightning = "^2.0"
torch             = "^2.0"
torchaudio        = "^2.0"
torchvision       = "^0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
