[tool.poetry]
name = "vida"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

chess             = "^1.9"
cog               = "^0.6"
cupy-cuda117      = "^10.6"
octoml-profile    = "==0.1.5"
pynecone          = { git = "https://github.com/pynecone-io/pynecone.git" }
pytorch-lightning = "^2.0"
requests          = "^2.28"
torch             = "^2.0"
torchaudio        = "^2.0"
torchvision       = "^0.15"

[tool.poetry.dev-dependencies]
black = "^23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
